--- a/frontend/src/app/pages/history/history.component.html
+++ b/frontend/src/app/pages/history/history.component.html
@@ -1,4 +1,4 @@
-<div class="jakt-header">Retrieverträning</div>
+<div class="jakt-header">Träningshistorik</div>
 <section class="history-wrapper">
 
 
@@ -40,4 +40,7 @@
 
 
     <app-calendar [recentSessions]="recentSessions" [dogs]="dogs" [selectedDogId]="selectedDogId"></app-calendar>
+
 </section>
+
+<app-footer></app-footer>
