--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -5,7 +5,6 @@
     </div>
 
     <div class="header" *ngIf="activeDog">
-
         <div class="picture">
             <img [src]="getDogImage(activeDog.imageUrl)" [alt]="activeDog.name" class="dog-profile-pic">
         </div>
@@ -60,13 +59,9 @@
     <button class="add-dog" (click)="openAddDogModal()" matTooltip="Lägg till hund" matTooltipPosition="below">Lägg till
         hund</button>
 
-
-
-
+    <!-- Modal för senaste träning (shared component) -->
     <app-latest-training [training]="latestTraining" [dogName]="activeDog?.nickname">
     </app-latest-training>
-
-
 
 
     <div class="profile-card weight-tracking">
@@ -120,7 +115,6 @@
                 </div>
 
 
-
                 <div class="button-group">
                     <button mat-raised-button color="primary" type="submit">
                         <mat-icon>check</mat-icon> Spara
@@ -135,6 +129,6 @@
 
 
 
-
-
 </div>
+
+<app-footer></app-footer>
