--- a/frontend/src/app/shared/latest-training/latest-training.component.css
+++ b/frontend/src/app/shared/latest-training/latest-training.component.css
@@ -1,4 +1,5 @@
 .training-card {
+    border-left: 6px solid #1a353e;
     filter: drop-shadow(3px 3px 4px #050505);
     background: #f5f5f5;
     border-radius: 16px;
@@ -6,8 +7,6 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 15px;
 }
-
-
 
 .training-card p {
     margin: 0.4rem 0;
@@ -20,13 +19,13 @@
 }
 
 .training-card__name {
+    border-right: 6px solid #1a353e;
     font-size: 1.2rem;
     font-weight: 700;
     color: white;
-    background-color: #2F4858;
+    background-color: #1f8787;
     text-align: center;
     padding: 10px;
     margin: 0;
     border-radius: 8px;
-    /* filter: drop-shadow(3px 3px 4px #050505); */
 }
